force-app/main/default/objects/Due_Diligence_Timer__c/Due_Diligence_Timer__c.object-meta.xml
<CustomObject>
    <label>Due Diligence Timer</label>
    <nameField>
        <displayFormat>TIMER-{00000}</displayFormat>
        <label>Due Diligence Timer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Due Diligence Timers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>