force-app/main/default/objects/Due_Diligence_Timer__c/fields/ET__c.field-meta.xml
<CustomField>
    <fullName>ET__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>