force-app/main/default/objects/Due_Diligence_Timer__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Due Diligence Timers</relationshipLabel>
    <relationshipName>Due_Diligence_Timers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>