force-app/main/default/objects/Due_Diligence_Timer__c/fields/ST__c.field-meta.xml
<CustomField>
    <fullName>ST__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>