force-app/main/default/objects/Due_Diligence_Timer__c/fields/Time_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>Time_Elapsed__c</fullName>
    <formula>(ET__c-ST__c)-(2*FLOOR((ET__c-ST__c)/7))</formula>
    <label>Time Elapsed</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>