force-app/main/default/objects/Due_Diligence_Timer__c/fields/Time_Elapsed_DHM__c.field-meta.xml
<CustomField>
    <fullName>Time_Elapsed_DHM__c</fullName>
    <formula>TEXT( FLOOR( Time_Elapsed__c )) &amp; &quot; Days &quot; &amp; TEXT( FLOOR(( Time_Elapsed__c - FLOOR(Time_Elapsed__c) )*24) ) &amp; &quot; Hours &quot; &amp; TEXT( ROUND( MOD( Time_Elapsed__c * 24 * 60, 100 ), 0 ) ) &amp; &quot; Minutes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Elapsed (D,H,M)</label>
    <type>Text</type>
</CustomField>